removed unwanted tiles from dashboard page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -74,7 +74,7 @@
       "BADGE": "04",
       "LIST": {
         "DEFAULT": "Default",
-        "SAAS": "Saas",
+        "SAAS": "Dashboard",
         "CRYPTO": "Crypto",
         "BLOG": "Blog",
         "JOBS": "Jobs"
