adding changes for the scan results

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -160,7 +160,7 @@
     "PROJECTS": {
       "TEXT": "Projects",
       "LIST": {
-        "GRID": "Projects Grid",
+        "GRID": "Repositories",
         "PROJECTLIST": "Projects List",
         "OVERVIEW": "Project Overview",
         "CREATE": "Create New"
